--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
     <div class="bar-fixed">
         <div class="bar-fixed-bg"></div>
-        <div>
-            <img src="assets/logo-baiko.svg" alt="logo da Baiko">
-            <p>Seja o primeiro a receber novidades da Baiko Studios!</p>
-        </div>
+        <img src="assets/logo-baiko.svg" alt="logo da Baiko">
+        <p>Seja o primeiro a receber novidades da Baiko Studios!</p>
         <a href="" class="button-vip">Entrar na lista vip 🐡</a>
     </div>
 
@@ -163,7 +161,7 @@
         <h1 class="font-bueno-extra-bold">Não perca nossa<br>primeira coleção</h1>
         <div class="items-center">
             <p>Lançamento no dia <span>??/??</span></p>
-            <p>Se inscreva<br> que vai ficar<br> sabendo >:)</p>
+            <p class="inv-text">Se inscreva<br> que vai ficar<br> sabendo >:)</p>
         </div>
     </section>
 
