--- a/index.html
+++ b/index.html
@@ -26,17 +26,24 @@
 
     <header>
         <p>
-            | SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS | ACESSO ANTECIPADO | CUPONS EXCLUSIVOS | NOVIDADES
-            | AVISOS | PARTICIPE DO DESENVOLVIMENTO DE PEÇAS |
+            SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS<span class="pipe">|</span>ACESSO ANTECIPADO<span
+                class="pipe">|</span>CUPONS EXCLUSIVOS<span class="pipe">|</span>NOVIDADES<span
+                class="pipe">|</span>AVISOS<span class="pipe">|</span>PARTICIPE DO DESENVOLVIMENTO DE PEÇAS<span
+                class="pipe">|</span>
         </p>
         <p>
-            | SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS | ACESSO ANTECIPADO | CUPONS EXCLUSIVOS | NOVIDADES
-            | AVISOS | PARTICIPE DO DESENVOLVIMENTO DE PEÇAS |
+            SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS<span class="pipe">|</span>ACESSO ANTECIPADO<span
+                class="pipe">|</span> CUPONS EXCLUSIVOS<span class="pipe">|</span> NOVIDADES<span class="pipe">|</span>
+            AVISOS <span class="pipe">|</span> PARTICIPE DO DESENVOLVIMENTO DE PEÇAS<span class="pipe">|</span>
         </p>
         <p>
-            | SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS | ACESSO ANTECIPADO | CUPONS EXCLUSIVOS | NOVIDADES
-            | AVISOS | PARTICIPE DO DESENVOLVIMENTO DE PEÇAS |
+            SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS<span class="pipe">|</span>ACESSO ANTECIPADO<span
+                class="pipe">|</span> CUPONS EXCLUSIVOS<span class="pipe">|</span> NOVIDADES<span
+                class="pipe">|</span>AVISOS<span class="pipe">|</span> PARTICIPE DO DESENVOLVIMENTO DE PEÇAS<span
+                class="pipe">|</span>
         </p>
+
+
 
 
     </header>
