--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -13,18 +13,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
-
     <div class="bar-fixed">
         <div class="bar-fixed-bg"></div>
-        <img src="assets/logo-baiko.svg" alt="logo da Baiko">
-        <p>Seja o primeiro a receber novidades da Baiko Studios!</p>
-        <a href="" class="button-vip">Entrar na lista vip 🐡</a>
+        <div>
+            <img src="assets/logo-baiko.svg" alt="logo da Baiko">
+            <p>Seja o primeiro a receber novidades da Baiko Studios!</p>
+        </div>
+        <a href="#main" class="button-vip">Entrar na lista vip 🐡</a>
     </div>
 
-    <header>
+    <header id="header">
         <p>
             SE INSCREVE NA LISTA VIP E GARANTA DIVERSOS BENEFÍCIOS<span class="pipe">|</span>ACESSO ANTECIPADO<span
                 class="pipe">|</span>CUPONS EXCLUSIVOS<span class="pipe">|</span>NOVIDADES<span
@@ -42,43 +44,53 @@
                 class="pipe">|</span>AVISOS<span class="pipe">|</span> PARTICIPE DO DESENVOLVIMENTO DE PEÇAS<span
                 class="pipe">|</span>
         </p>
-
-
-
-
     </header>
 
     <main id="main" class="flex justify-center">
-        <form action="" class="flex flex-direction-col">
-            <img src="assets/logo-form-baiko.svg" alt="" class="mx-auto">
+        <form
+            action="https://baiko.us21.list-manage.com/subscribe/post?u=2500803ee6ca742bed304d42e&amp;id=3fa4cfd0b1&amp;f_id=0017dde6f0"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
+            class="flex flex-direction-col" onsubmit="return validarFormulario()">
+            <img src="assets/logo-form-baiko.svg" alt="Logo Baiko no formulário" class="mx-auto">
             <label class="sr-only" for="name">Nome</label>
             <label class="sr-only" for="email">Email</label>
-            <label class="sr-only" for="number">Número de telefone</label>
-            <input placeholder="Seu nome:" id="name" type="text">
-            <input placeholder="Seu e-mail:" id="email" type="email">
-            <input placeholder="Seu número" id="number" type="number">
-            <button class="button">Entrar na lista vip!</button>
+            <label class="sr-only" for="tel">Número de telefone</label>
+            <input class="input" required name="FNAME" placeholder="Seu nome:" id="name" type="text">
+            <span id="erroNome"></span>
+            <input class="input" required name="EMAIL" placeholder="Seu e-mail:" id="email" type="email">
+            <span id="erroEmail"></span>
+            <input class="input" required name="PHONE" placeholder="Seu número" id="tel" type="text" minlength="15"
+                maxlength="15" pattern="\(\d{2}\)\s9\d{4}-\d{4}" title="Digite um telefone válido: (DD) 9XXXX-XXXX"
+                oninput="mascararTelefone(this)">
+            <span id="erroTelefone"></span>
+            <button type="submit" name="subscribe" class="button">Entrar na lista vip!</button>
         </form>
 
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player
-            id="arrow-down" src="https://lottie.host/6edc25ea-9f97-4670-9352-2004a9726de9/ePlxURRZyY.json" speed="1"
-            style="width: 48px; height: 48px" loop autoplay direction="1" mode="normal"></lottie-player>
+
+        <lottie-player id="arrow-down" src="https://lottie.host/6edc25ea-9f97-4670-9352-2004a9726de9/ePlxURRZyY.json"
+            speed="1" style="width: 48px; height: 48px" loop autoplay direction="1" mode="normal"></lottie-player>
     </main>
 
     <section class="benefits-section">
+
         <div>
-            <h1 class="font-bueno-extra-bold">Quem é vip<br>tem be<span class="font-bueno-extra-bold">nefíc</span>io!!
+            <h1 class="font-bueno-extra-bold">Quem é <br class="br-line-mob">vip <br class="br-line-desktop">tem <br
+                    class="br-line-mob">be<span id="exclusive" class="font-bueno-extra-bold"><lottie-player
+                        src="./assets/exclusivo.json" id="exclusive-animated" speed="1"
+                        style="width: 200px; height: 200px" autoplay hover direction="1"
+                        mode="normal"></lottie-player>nefíc</span>io!!
             </h1>
         </div>
         <div class="cards">
             <div>
                 <article class="card card-1">
+
                     <div class="card-header">
                         <p>Benefício</p>
                         <p>01</p>
                     </div>
                     <h2 class="font-bueno">Acesso <span class="font-bueno indented">antecipado</span></h1>
-                        <p>Receba acesso antecipado a pré venda de novos lançamentos de coleções da marca.</p>
+                        <p>Receba acesso antecipado à pré venda de novos lançamentos de coleções da marca.</p>
                 </article>
 
                 <article class="card card-3">
@@ -99,8 +111,8 @@
                         <h2 class="font-bueno">Venha fazer parte do nosso aquário</h2>
                         <p>Entre na lista VIP e garanta todos esses benefícios agora mesmo! Ah, e tem mais coisa vindo
                             por
-                            ai,
-                            então ainda tem mais surpresa hein.</p>
+                            aí,
+                            então ainda tem mais surpresa, hein.</p>
                     </article>
                 </a>
 
@@ -119,12 +131,10 @@
                     <img class="arrow-card" src="./assets/seta-direita.svg" alt="seta direita">
                     <p>Pesquisa</p>
                     <h2 class="font-bueno">Nos ajude a te entender!</h2>
-                    <p>Responda a uma pesquisa rápida sobre nosso público ajudando a Baiko a desenvolver o melhor para
+                    <p>Responda a uma pesquisa rápida sobre nosso público, ajudando a Baiko a desenvolver o melhor para
                         você!
                     </p>
                 </article>
-
-
 
                 <article class="card card-4">
                     <div>
@@ -167,7 +177,7 @@
                         </div>
 
                     </div>
-                    <p class="text-center">Participe do desenvolviemento das nossas peças, dando opniões e ideias.</p>
+                    <p class="text-center">Participe do desenvolvimento das nossas peças, dando opniões e ideias.</p>
                 </article>
             </div>
 
@@ -191,7 +201,19 @@
         </div>
         <p>© Copyright BAIKO STUDIOS - 2023</p>
     </footer>
-    <script src="./script.js"></script>
+    <script>
+
+
+
+    </script>
+    <script src="./activeFixedBarOnScroll.js"></script>
+    <script src="./telMask.js"></script>
+    <script src="./formValidation.js"></script>
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+    <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);
+    </script>
+
+
 </body>
 
 </html>
