--- a/thanks.html
+++ b/thanks.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baiko - Valeu!</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./media-queries.css">
-    <link rel="stylesheet" href="./fonts.css">
-    <link rel="stylesheet" href="./thanks.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/media-queries.css">
+    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/thanks.css">
+    <link rel="shortcut icon" href="./assets/blowfish3.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <a href="/index.html">
+            <a href="/cadastro/">
                 <img src="./assets/logo-form-baiko.svg" alt="Logo da Baiko">
             </a>
         </header>
@@ -34,9 +35,9 @@
     <footer class="flex flex-direction-col justify-center items-center">
         <h3>Redes sociais</h3>
         <div class="flex">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Tik Tok</a>
+            <a href="https://www.facebook.com/profile.php?id=100090578625621/" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/baiko.studios/" target="_blank">Instagram</a>
+            <a href="https://www.tiktok.com/@baiko.studios/" target="_blank">Tik Tok</a>
         </div>
         <p>© Copyright BAIKO STUDIOS - 2023</p>
     </footer>
