--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GV4EZKCWV%22%3E"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5GV4EZKCWV');
+    </script>
 </head>
 
 <body>
-    <a href="#main">
+    <a href=" #main">
         <div id="button-top"></div>
     </a>
     <div class="bar-fixed">
@@ -46,6 +55,7 @@
     </header>
 
     <main id="main" class="flex justify-center">
+        <video id="video-bg" src="./assets/video-bg.mp4" loop autoplay></video>
         <form
             action="https://baiko.us21.list-manage.com/subscribe/post?u=2500803ee6ca742bed304d42e&amp;id=3fa4cfd0b1&amp;f_id=0017dde6f0"
             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
@@ -68,19 +78,16 @@
             </div>
         </form>
 
-
         <lottie-player id="arrow-down" src="https://lottie.host/6edc25ea-9f97-4670-9352-2004a9726de9/ePlxURRZyY.json"
             speed="1" style="width: 48px; height: 48px" loop autoplay direction="1" mode="normal"></lottie-player>
     </main>
 
     <section class="benefits-section">
-
         <div>
             <h1 class="font-bueno-extra-bold title-vip">Quem é <br class="br-line-mob">vip <br
-                    class="br-line-desktop">tem <br class="br-line-mob">be<span id="exclusive"
-                    class="font-bueno-extra-bold"><lottie-player src="./assets/exclusivo.json" id="exclusive-animated"
-                        speed="2" style="width: 200px; height: 200px" direction="1"
-                        mode="normal"></lottie-player>nefíc</span>io!!
+                    class="br-line-desktop">tem <br class="br-line-mob">be<span id="exclusive" class=""><lottie-player
+                        src="./assets/exclusivo.json" id="exclusive-animated" speed="2"
+                        style="width: 350px; height: 350px" direction="1" mode="normal"></lottie-player>nefíc</span>io!!
             </h1>
         </div>
         <div class="cards">
@@ -217,7 +224,7 @@
     <script src="./js/activeFixedBarOnScroll.js"></script>
     <script src="./js/telMask.js"></script>
     <script src="./js/formValidation.js"></script>
-    <script src="./js/buttonTop.js"></script>
+    <script defer src="./js/buttonTop.js"></script>
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);
     </script>
