--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     </header>
 
     <main id="main" class="flex justify-center">
-        <video id="video-bg" src="./assets/video-bg.mp4" loop autoplay></video>
+        <video autoplay loop muted id="video-bg">
+            <source src="./assets/video-bg.mp4" type="video/mp4">
+        </video>
         <form
             action="https://baiko.us21.list-manage.com/subscribe/post?u=2500803ee6ca742bed304d42e&amp;id=3fa4cfd0b1&amp;f_id=0017dde6f0"
             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
