--- a/thanks.html
+++ b/thanks.html
@@ -24,11 +24,15 @@
             </a>
         </header>
         <main>
+            <video autoplay loop muted id="video-bg">
+                <source src="./assets/video-bg.mp4" type="video/mp4">
+            </video>
             <section>
                 <h1>Bem Vindo a<br>Baiko Studios!</h1>
                 <p>ah, e aproveitando que você está na nossa lista vip,<br> que tal nos ajudar a te conhecer melhor?</p>
                 <p>Responda a uma pesquisa rápida para ajudar a Baiko a desenvolver o melhor para você!</p>
-                <a href="#" class="button">Responder pesquisa</a>
+                <a href="https://docs.google.com/forms/d/1_H7RZC7PusBIyLmoSbnS6nK2ZzhGxiwfE9afGi7-uGU/edit"
+                    target="_blank" class="button">Responder pesquisa</a>
             </section>
         </main>
     </div>
