--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <a href=" #main">
+    <a href="#main">
         <div id="button-top"></div>
     </a>
     <div class="bar-fixed">
@@ -140,6 +140,9 @@
 
             <div>
                 <article class="card card-2">
+                    <a id="card-a-form"
+                        href="https://docs.google.com/forms/d/1_H7RZC7PusBIyLmoSbnS6nK2ZzhGxiwfE9afGi7-uGU/edit"
+                        target="_blank" rel="noopener noreferrer"></a>
                     <img class="arrow-card" src="./assets/seta-direita.svg" alt="seta direita">
                     <p>Pesquisa</p>
                     <h2 class="font-bueno">Nos ajude a te entender!</h2>
