--- a/thanks.html
+++ b/thanks.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="color-scheme" content="light">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GV4EZKCWV%22%3E"></script>
     <script>
@@ -39,7 +40,7 @@
                 <h1>Bem Vindo a<br>Baiko Studios!</h1>
                 <p>ah, e aproveitando que você está na nossa lista vip,<br> que tal nos ajudar a te conhecer melhor?</p>
                 <p>Responda a uma pesquisa rápida para ajudar a Baiko a desenvolver o melhor para você!</p>
-                <a href="https://docs.google.com/forms/d/1_H7RZC7PusBIyLmoSbnS6nK2ZzhGxiwfE9afGi7-uGU/edit"
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf0IFuaIzGAy3p1121xSCsUnQvOYK6jXVhSPN69ecvTtaToAQ/viewform?usp=sf_link"
                     target="_blank" class="button">Responder pesquisa</a>
             </section>
         </main>
@@ -53,6 +54,26 @@
         </div>
         <p>© Copyright BAIKO STUDIOS - 2023</p>
     </footer>
+
+    <!-- Meta Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '3089082884733326');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=3089082884733326&ev=PageView&noscript=1" /></noscript>
+    <!-- End Meta Pixel Code -->
 </body>
 
 </html>
